# idira-pam-elimity-insights-connector

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  upload-pam-data-to-elimity.py
Elimity-Source-Data-Model/: Idira-PAM-data-model.json
