[project]
name = "cyberark-pam-elimity-insights-connector"
version = "0.6.0"
description = "Connector to upload data from a Idira PAM (formerly CyberArk PAM) environment to Elimity Insights"
authors = [
    {name = "Bernhard Brueckler",email = "bernhard.brueckler@nviso.eu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "elimity-insights-client (>=10.2.1,<11.0.0)",
]
